<resources>
    <string name="app_name">BuildUIWithLayoutEditor2</string>
    <string name="firstname">firstname</string>
    <string name="lastname">Lastname</string>
    <string name="jobtitle">Jobtitle</string>
    <string name="employee_information_text_here">Employee information text here .....</string>
    <string name="_1">1</string>
    <string name="_2">2</string>
    <string name="_3">3</string>
    <string name="_4">4</string>
    <string name="_5">5</string>
    <string name="todo">TODO</string>
</resources>
