<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity">
    <LinearLayout
            android:orientation="vertical"
            android:layout_width="394dp"
            android:layout_height="529dp" android:layout_marginEnd="8dp"
            app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="8dp" android:id="@+id/linearLayout" android:layout_marginTop="50dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/linearLayout2" android:layout_marginBottom="8dp"
            app:layout_constraintHorizontal_bias="1.0">
        <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">
            <ImageView
                    android:layout_width="189dp"
                    android:layout_height="wrap_content" app:srcCompat="@drawable/employee1" android:id="@+id/imageView"
                    android:layout_weight="1" android:contentDescription="@string/todo"/>
            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content" android:layout_weight="1">
                <TextView
                        android:text="@string/firstname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView"/>
                <TextView
                        android:text="@string/lastname"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView2"/>
                <TextView
                        android:text="@string/jobtitle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" android:id="@+id/textView3"/>
            </LinearLayout>
        </LinearLayout>
        <TextView
                android:text="@string/employee_information_text_here"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:id="@+id/textView4"/>
    </LinearLayout>
    <LinearLayout
            android:orientation="horizontal"
            android:layout_width="421dp"
            android:layout_height="42dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            app:layout_constraintTop_toBottomOf="@+id/linearLayout" android:layout_marginTop="48dp"
            android:id="@+id/linearLayout2">
        <TextView
                android:text="@string/_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView5"
                android:layout_weight="1"
                android:textAlignment="center"
                android:onClick="numberClicked"/>
        <TextView
                android:text="@string/_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView6"
                android:layout_weight="1"
                android:textAlignment="center"
                android:onClick="numberClicked"/>/>
        <TextView
                android:text="@string/_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView7"
                android:layout_weight="1"
                android:textAlignment="center"
                android:onClick="numberClicked"/>/>
        <TextView
                android:text="@string/_4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView8"
                android:layout_weight="1"
                android:textAlignment="center"
                android:onClick="numberClicked"/>/>
        <TextView
                android:text="@string/_5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textView9"
                android:layout_weight="1"
                android:textAlignment="center"
                android:onClick="numberClicked"/>/>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>